@@ -267,8 +267,9 @@ def exec_task(task, d):
         bb.msg.debug(1, bb.msg.domain.Build, "Executing task %s" % task)
         old_overrides = data.getVar('OVERRIDES', d, 0)
         localdata = data.createCopy(d)
-        data.setVar('OVERRIDES', 'task_%s:%s' % (task, old_overrides), localdata)
+        data.setVar('OVERRIDES', 'task-%s:%s' % (task[3:], old_overrides), localdata)
         data.update_data(localdata)
+        data.expandKeys(localdata)
         event.fire(TaskStarted(task, localdata))
         exec_func(task, localdata)
         event.fire(TaskSucceeded(task, localdata))
